--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -14,36 +14,20 @@ body {
 }
 
 .app {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 .app__tapbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-width: 90px;
   max-width: 110px;
 }
 .app__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -58,3 +42,5 @@ button {
   cursor: pointer;
   overflow: hidden;
 }
+
+/*# sourceMappingURL=App.css.map */
