--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -4,16 +4,9 @@
   height: 100%;
   background: #FFFFFF;
   border-radius: 0px 30px 30px 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: wrap;
-      -ms-flex: wrap;
-          flex: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex: wrap;
+  flex-flow: column;
 }
 .tapbar__icon {
   margin: auto;
@@ -22,8 +15,7 @@
   border: none;
   cursor: pointer;
   overflow: hidden;
-  -webkit-filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
-          filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
+  filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
 }
 .tapbar__exit-icon {
   margin: 300px auto auto auto;
@@ -33,3 +25,5 @@
   cursor: pointer;
   overflow: hidden;
 }
+
+/*# sourceMappingURL=TapBar.css.map */
