--- a/front/src/css/SearchBar.css
+++ b/front/src/css/SearchBar.css
@@ -12,5 +12,14 @@
   position: absolute;
   margin: 8px;
 }
-
-/*# sourceMappingURL=SearchBar.css.map */
+.search input {
+  background-color: transparent;
+  border: 0px;
+  outline: none;
+  font-family: SF Pro Rounded;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+}
