--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -30,9 +30,12 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
         width: 100%;
         height: 100%;
+
+        &_center{
+            align-items: center;
+        }
     }
 }
 
