--- a/front/src/scss/Home.scss
+++ b/front/src/scss/Home.scss
@@ -27,4 +27,15 @@
     &__search {
         margin: 0 auto;
     }
+    &__reserve {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        backdrop-filter: blur(1.5rem)
+    }
 }
