--- a/front/src/scss/RestorOpen/TitleBar.scss
+++ b/front/src/scss/RestorOpen/TitleBar.scss
@@ -18,15 +18,15 @@
         flex-basis: 100%;
         flex: 3;
 
-        object-fit: contain;
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
     }
     &__img img{
-        width: 100%;
-        object-fit: contain;
+        width: auto;
+        height: 100%;
     }
     &__like {
         display: flex;
