--- a/front/src/scss/SearchBar.scss
+++ b/front/src/scss/SearchBar.scss
@@ -5,13 +5,28 @@
     background: #F2F2F2;
     border-radius: 12px;
     
-    
+
     &__img {
         margin: 8px;
         margin-left: 15px;
     }
+
     &__input{
         position: absolute;
         margin: 8px;
+    }
+
+    input {
+        background-color: transparent;
+        border: 0px;
+        outline: none;
+    
+        font-family: SF Pro Rounded;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 20px;
+    
+        color: #000000;
     }
 }
